--- a/styles.css
+++ b/styles.css
@@ -6,7 +6,7 @@ body {
     justify-content: center;
     align-items: center;
     height: 100vh;
-    background-image: url('img/desktop pink aura wallpaper.jpeg');
+    background-image: url('desktop pink aura wallpaper.jpeg');
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
